GKE/ingress-cloud-armor/flask.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"flask-backend-config"}}'
  name: flask
  labels:
    app: flask
  namespace: default
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 5000
    nodePort: 32000
  selector:
    app: flask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
      version: v1
  template:
    metadata:
      labels:
        app: flask
        version: v1
    spec:
      serviceAccountName: flask
      containers:
      - image: ozrlz/flask-client:k8s
        imagePullPolicy: IfNotPresent
        name: flask
        ports:
        - containerPort: 5000
